gaps fixed

--- a/styles/components/sections/Programs.module.sass
+++ b/styles/components/sections/Programs.module.sass
@@ -4,7 +4,7 @@
 
 .container
   @include m.media(laptop, desktop)
-    @include m.gap($pt: f.px(111))
+    @include m.gap($pt: f.px(90), $pb: f.px(0))
   @include m.media(phone, tablet)
     @include m.gap($pt: f.px(30))
   &.withFilters
